app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */


 body {
   margin: 0;
   padding: 0;

   color: rgb(50,50,50);
   font-family: 'Museo Slab';
   font-size: 112.5%;
   line-height: 1.6em;
   /*background-image: url("palm_tree.jpg");*/
 }


 .center-text {
   text-align: center;
 }

 h4{
   text-align: center;
 }
nav{
  background-color: rgba(255,255,255,0.9);

  z-index: 5;

}
.material-icons{
  color: black;
}

 nav ul a{
   color: black;
 }
.slider .indicators .indicator-item.active{
  background-color: #d82928;
}

.slider .slides li img{
  opacity: 0.4;
}

.slider {
    /*height: 400px;*/
    background: transparent;
    /*margin-bottom: 0;*/
}

.red-font{
  color: #d82928;
}

i{
  color: white;
}

.white-font{
  color: white;
}

.chart-container{
  background-color: #F2F2F2;
}

.charts{
  margin-top: 90px;
}
 /* ================ The Timeline ================ */
.process{
  background-color: #212121;
}

.process-footer{
  background-color: #212121;
  text-align: center;
}

.heavyLiftingTitle{
  color: white;
  text-align: center;
  padding-top: 80px;
}

.heavyLifting{
  color: white;
  text-align: center;
  margin-bottom: 50px;

}

 .timeline {
   position: relative;
   width: 660px;
   margin: 0 auto;
   margin-top: 20px;
   padding: 1em 0;
   list-style-type: none;
 }

 .timeline:before {
   position: absolute;
   left: 50%;
   top: 0;
   content: ' ';
   display: block;
   width: 6px;
   height: 100%;
   margin-left: -3px;
   background: rgb(80,80,80);
   background: -moz-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
   background: -webkit-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
   background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
   background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
   background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);

   z-index: 5;
 }

 .timeline li {
   padding: 1em 0;
 }

 .timeline li:after {
   content: "";
   display: block;
   height: 0;
   clear: both;
   visibility: hidden;
 }

 .direction-l {
   position: relative;
   width: 300px;
   float: left;
   text-align: right;
 }

 .direction-r {
   position: relative;
   width: 300px;
   float: right;
 }

 .flag-wrapper {
   position: relative;
   display: inline-block;

   text-align: center;
 }

 .flag {
   position: relative;
   display: inline;
   background: rgb(248,248,248);
   padding: 6px 10px;
   border-radius: 5px;
   color: #d82928;

   font-weight: 600;
   text-align: left;
 }

 .direction-l .flag {
   -webkit-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
   -moz-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
   box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
 }

 .direction-r .flag {
   -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
   -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
   box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
 }

 .direction-l .flag:before,
 .direction-r .flag:before {
   position: absolute;
   top: 50%;
   right: -40px;
   content: ' ';
   display: block;
   width: 12px;
   height: 12px;
   margin-top: -10px;
   background: #fff;
   border-radius: 10px;
   border: 4px solid rgb(255,80,80);
   z-index: 10;
 }

 .direction-r .flag:before {
   left: -40px;
 }

 .direction-l .flag:after {
   content: "";
   position: absolute;
   left: 100%;
   top: 50%;
   height: 0;
   width: 0;
   margin-top: -8px;
   border: solid transparent;
   border-left-color: rgb(248,248,248);
   border-width: 8px;
   pointer-events: none;
 }

 .direction-r .flag:after {
   content: "";
   position: absolute;
   right: 100%;
   top: 50%;
   height: 0;
   width: 0;
   margin-top: -8px;
   border: solid transparent;
   border-right-color: rgb(248,248,248);
   border-width: 8px;
   pointer-events: none;
 }

 .time-wrapper {
   display: inline;

   line-height: 1em;
   font-size: 0.66666em;
   color: rgb(250,80,80);
   vertical-align: middle;
 }

 .direction-l .time-wrapper {
   float: left;
 }

 .direction-r .time-wrapper {
   float: right;
 }

 .time {
   display: inline-block;
   padding: 4px 6px;
   background: rgb(248,248,248);
 }

 .desc {
   margin: 1em 0.75em 0 0;

   font-size: 0.77777em;
   font-style: italic;
   line-height: 1.5em;
   color: white;
 }

 .direction-r .desc {
   margin: 1em 0 0 0.75em;
 }

 /* ================ Timeline Media Queries ================ */

 @media screen and (max-width: 660px) {

 .timeline {
  	width: 100%;
 	padding: 4em 0 1em 0;
 }

 .timeline li {
 	padding: 2em 0;
 }

 .direction-l,
 .direction-r {
 	float: none;
 	width: 100%;

 	text-align: center;
 }

 .flag-wrapper {
 	text-align: center;
 }

 .flag {
 	background: rgb(255,255,255);
 	z-index: 15;
 }

 .direction-l .flag:before,
 .direction-r .flag:before {
   position: absolute;
   top: -30px;
 	left: 50%;
 	content: ' ';
 	display: block;
 	width: 12px;
 	height: 12px;
 	margin-left: -9px;
 	background: #fff;
 	border-radius: 10px;
 	border: 4px solid rgb(255,80,80);
 	z-index: 10;
 }

 .direction-l .flag:after,
 .direction-r .flag:after {
 	content: "";
 	position: absolute;
 	left: 50%;
 	top: -8px;
 	height: 0;
 	width: 0;
 	margin-left: -8px;
 	border: solid transparent;
 	border-bottom-color: rgb(255,255,255);
 	border-width: 8px;
 	pointer-events: none;
 }

 .time-wrapper {
 	display: block;
 	position: relative;
 	margin: 4px 0 0 0;
 	z-index: 14;
 }

 .direction-l .time-wrapper {
 	float: none;
 }

 .direction-r .time-wrapper {
 	float: none;
 }

 .desc {
 	position: relative;
 	margin: 1em 0 0 0;
 	padding: 1em;
 	background: rgb(245,245,245);
 	-webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
 	-moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
 	box-shadow: 0 0 1px rgba(0,0,0,0.20);

   z-index: 15;
 }

 .direction-l .desc,
 .direction-r .desc {
 	position: relative;
 	margin: 1em 1em 0 1em;
 	padding: 1em;

   z-index: 15;
 }

 }

 @media screen and (min-width: 400px ?? max-width: 660px) {

 .direction-l .desc,
 .direction-r .desc {
 	margin: 1em 4em 0 4em;
 }

 }

 .section-title{
   padding-top: 20px;
 }
 .pub-intro{

 }
 .bottom-point{
   padding-bottom: 50px;
 }

 .mag-covers{
   width: 70%;
 }

 .pub-description{
   background-color: #212121;
   color: white;
   height: 80px;
 }

 .tagline{
   margin-top: 90px;
   color: #d82928;
 }

 .chapter{
   width: 18%;
 }

 .purchase{
   color: #d82928;
 }

 .buy-box{
   border-style: solid;
   background-color: #212121;
   border-radius: 10px;
 }

 .buy-title{
   color: white;
   text-align: center;
 }
 .amount{
   color: white;
   font-size: 1.5em;
   text-align: center;
   padding: 45px 0 ;
 }
 .stripe-button-el{
   margin-left: 50px;
   background: red;
   background-image: linear-gradient(#d82928,#d82928 85%,#d82928);
   padding-bottom: 20px;
 }

 .tweets-header{
   text-align: center;
   color: white;
   padding-top: 50px;
   margin-bottom: 50px;
   /*margin-bottom: 30px;*/
 }

 a{
   color: #d82928;
 }

 .rss-feed{
   margin-top: 60px;
   margin-bottom: 50px;
   border-style: solid;
   border-width: 1px;
   border-color: #E0E0E0;
   border-radius: 10px;
   height: 537px;
 }

 .rss-header{
   margin-top: 90px;
 }

 .feed-title{
   font-weight: bold;
   font-size: 1.1em;

 }
p{
  padding: 8px 2px;
}
 .feed-summary{
   padding-top: 10px;
 }
.stripe-button-el span {
    background: red;
  }

 .twitter-feed{
   background-image: url("avatar_all.png");
   background-color: black;
 }

.checkout-section{
    background-color: #212121;
}

.rectangle-speech-border {
  position:relative;
  padding:50px 15px;
  margin:1em 0 3em;
  border:3px solid #212121;
  text-align:center;
  color:#333;
  background:#fff;
  /* css3 */
  -webkit-border-radius:20px;
  -moz-border-radius:20px;
  border-radius:20px;
}

/* creates larger curve */
.rectangle-speech-border:before {
  content:"";
  position:absolute;
  z-index:10;
  bottom:-30px;
  left:50px;
  width:50px;
  height:30px;
  border-style:solid;
  border-width:0 3px 3px 0;
  border-color:#212121;
  background:transparent;
  /* css3 */
  -webkit-border-bottom-right-radius:80px 50px;
  -moz-border-radius-bottomright:80px 50px;
  border-bottom-right-radius:80px 50px;
  /* reduce the damage in FF3.0 */
  display:block;
}

/* creates smaller curve */
.rectangle-speech-border:after {
  content:"";
  position:absolute;
  z-index:10;
  bottom:-30px;
  left:56px;
  width:20px;
  height:30px;
  border-style:solid;
  border-width:0 3px 3px 0;
  border-color:#212121;
  background:transparent;
  /* css3 */
  -webkit-border-bottom-right-radius:40px 50px;
  -moz-border-radius-bottomright:40px 50px;
  border-bottom-right-radius:40px 50px;
  /* reduce the damage in FF3.0 */
  display:block;
}



/* creates a white rectangle to cover part of the oval border*/
.rectangle-speech-border > :first-child:after {
  content:"";
  position:absolute;
  bottom:-10px;
  left:76px;
  width:24px;
  height:15px;
  background:#fff;
}

rect[Attributes Style]{
  fill: red;
}

#calendar {
  margin: 70px;
}

.fc-event {
  border: 1px solid #d82928;
  background-color: #d82928;
  font-size: .69em;
}

.fc-toolbar h2 {
    margin: 0;
    color: #D82928;
}
nav ul a:hover{
  background-color: transparent;
}

.dropdown-content li>a, .dropdown-content li>span{
  color: black;
}

.footer-text {
  margin-top: 15px;
}

